v0.0.1/modules/schema/pages/class/GovSteamEU.adoc
= `GovSteamEU`
:toclevels: 4


+++Simplified boiler and steam turbine with PID governor.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:GovSteamEU`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]
*** xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]
**** *`GovSteamEU`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
GovSteamEU {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}





































































AsynchronousMachineDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



TurbineLoadControllerDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



SynchronousMachineDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}





































GovSteamEU -> AsynchronousMachineDynamics: AsynchronousMachineDynamics


GovSteamEU -> TurbineLoadControllerDynamics: TurbineLoadControllerDynamics


GovSteamEU -> SynchronousMachineDynamics: SynchronousMachineDynamics


GovSteamEU -> DiagramObject: DiagramObjects


GovSteamEU -> InstanceSet: InstanceSet


GovSteamEU -> Name: Names


GovSteamEU -> ChangeSetMember: PropertiesCIMDataObject


GovSteamEU -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<chc,`chc`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Control valves rate closing limit (<i>Chc</i>).  Unit = PU / s.  Typical value = -3,3.+++

| <<cho,`cho`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Control valves rate opening limit (<i>Cho</i>).  Unit = PU / s.  Typical value = 0,17.+++

| <<cic,`cic`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Intercept valves rate closing limit (<i>Cic</i>).  Typical value = -2,2.+++

| <<cio,`cio`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Intercept valves rate opening limit (<i>Cio</i>).  Typical value = 0,123.+++

| <<db1,`db1`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Deadband of the frequency corrector (<i>db1</i>).  Typical value = 0.+++

| <<db2,`db2`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Deadband of the speed governor (<i>db2</i>).  Typical value = 0,0004.+++

| <<hhpmax,`hhpmax`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Maximum control valve position (<i>Hhpmax</i>).  Typical value = 1.+++

| <<ke,`ke`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Gain of the power controller (<i>Ke</i>).  Typical value = 0,65.+++

| <<kfcor,`kfcor`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Gain of the frequency corrector (<i>Kfcor</i>).  Typical value = 20.+++

| <<khp,`khp`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Fraction of total turbine output generated by HP part (<i>Khp</i>).  Typical value = 0,277.+++

| <<klp,`klp`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Fraction of total turbine output generated by HP part (<i>Klp</i>).  Typical value = 0,723.+++

| <<komegacor,`komegacor`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Gain of the speed governor (<i>Kwcor</i>).  Typical value = 20.+++

| <<mwbase,`mwbase`>>
| 0..1
| xref::class/ActivePower.adoc[`ActivePower`]
| +++Base for power values (<i>MWbase</i>) (&gt; 0).  Unit = MW.+++

| <<pmax,`pmax`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Maximal active power of the turbine (<i>Pmax</i>).  Typical value = 1.+++

| <<prhmax,`prhmax`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Maximum low pressure limit (<i>Prhmax</i>).  Typical value = 1,4.+++

| <<simx,`simx`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Intercept valves transfer limit (<i>Simx</i>).  Typical value = 0,425.+++

| <<tb,`tb`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Boiler time constant (<i>Tb</i>) (&gt;= 0).  Typical value = 100.+++

| <<tdp,`tdp`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Derivative time constant of the power controller (<i>Tdp</i>) (&gt;= 0).  Typical value = 0.+++

| <<ten,`ten`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Electro hydraulic transducer (<i>Ten</i>) (&gt;= 0).  Typical value = 0,1.+++

| <<tf,`tf`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Frequency transducer time constant (<i>Tf</i>) (&gt;= 0).  Typical value = 0.+++

| <<tfp,`tfp`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Time constant of the power controller (<i>Tfp</i>) (&gt;= 0).  Typical value = 0.+++

| <<thp,`thp`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++High pressure (HP) time constant of the turbine (<i>Thp</i>) (&gt;= 0).  Typical value = 0,31.+++

| <<tip,`tip`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Integral time constant of the power controller (<i>Tip</i>) (&gt;= 0).  Typical value = 2.+++

| <<tlp,`tlp`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Low pressure (LP) time constant of the turbine (<i>Tlp</i>) (&gt;= 0).  Typical value = 0,45.+++

| <<tp,`tp`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Power transducer time constant (<i>Tp</i>) (&gt;= 0).  Typical value = 0,07.+++

| <<trh,`trh`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Reheater  time constant of the turbine (<i>Trh</i>) (&gt;= 0).  Typical value = 8.+++

| <<tvhp,`tvhp`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Control valves servo time constant (<i>Tvhp</i>) (&gt;= 0).  Typical value = 0,1.+++

| <<tvip,`tvip`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Intercept valves servo time constant (<i>Tvip</i>) (&gt;= 0).  Typical value = 0,15.+++

| <<tw,`tw`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Speed transducer time constant (<i>Tw</i>) (&gt;= 0).  Typical value = 0,02.+++

| <<wfmax,`wfmax`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Upper limit for frequency correction (<i>Wfmax</i>) (&gt; GovSteamEU.wfmin).  Typical value = 0,05.+++

| <<wfmin,`wfmin`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Lower limit for frequency correction (<i>Wfmin</i>) (&lt; GovSteamEU.wfmax).  Typical value = -0,05.+++

| <<wmax1,`wmax1`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Emergency speed control lower limit (<i>wmax1</i>).  Typical value = 1,025.+++

| <<wmax2,`wmax2`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Emergency speed control upper limit (<i>wmax2</i>).  Typical value = 1,05.+++

| <<wwmax,`wwmax`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Upper limit for the speed governor (<i>Wwmax</i>) (&gt; GovSteamEU.wwmin).  Typical value = 0,1.+++

| <<wwmin,`wwmin`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Lower limit for the speed governor frequency correction (<i>Wwmin</i>) (&lt; GovSteamEU.wwmax).  Typical value = -1.+++

| <<AsynchronousMachineDynamics,`AsynchronousMachineDynamics`>>
| 0..1
| xref::class/AsynchronousMachineDynamics.adoc[`AsynchronousMachineDynamics`]
| +++Asynchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an association to SynchronousMachineDynamics or to AsynchronousMachineDynamics.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<SynchronousMachineDynamics,`SynchronousMachineDynamics`>>
| 0..1
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]
| +++Synchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an association to SynchronousMachineDynamics or to AsynchronousMachineDynamics.+++

| <<TurbineLoadControllerDynamics,`TurbineLoadControllerDynamics`>>
| 0..1
| xref::class/TurbineLoadControllerDynamics.adoc[`TurbineLoadControllerDynamics`]
| +++Turbine load controller providing input to this turbine-governor.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<enabled,`enabled`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#AsynchronousMachineDynamics]
=== `AsynchronousMachineDynamics`
+++Asynchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an association to SynchronousMachineDynamics or to AsynchronousMachineDynamics.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TurbineGovernorDynamics.AsynchronousMachineDynamics`
| Cardinality
| 0..1
| Type
| xref::class/AsynchronousMachineDynamics.adoc[`AsynchronousMachineDynamics`]

| Inherited from
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]


|===

//[discrete]
[#chc]
=== `chc`
+++Control valves rate closing limit (<i>Chc</i>).  Unit = PU / s.  Typical value = -3,3.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.chc`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#cho]
=== `cho`
+++Control valves rate opening limit (<i>Cho</i>).  Unit = PU / s.  Typical value = 0,17.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.cho`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#cic]
=== `cic`
+++Intercept valves rate closing limit (<i>Cic</i>).  Typical value = -2,2.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.cic`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#cio]
=== `cio`
+++Intercept valves rate opening limit (<i>Cio</i>).  Typical value = 0,123.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.cio`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#db1]
=== `db1`
+++Deadband of the frequency corrector (<i>db1</i>).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.db1`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#db2]
=== `db2`
+++Deadband of the speed governor (<i>db2</i>).  Typical value = 0,0004.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.db2`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#enabled]
=== `enabled`
+++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DynamicsFunctionBlock.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]


|===

//[discrete]
[#hhpmax]
=== `hhpmax`
+++Maximum control valve position (<i>Hhpmax</i>).  Typical value = 1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.hhpmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#ke]
=== `ke`
+++Gain of the power controller (<i>Ke</i>).  Typical value = 0,65.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.ke`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#kfcor]
=== `kfcor`
+++Gain of the frequency corrector (<i>Kfcor</i>).  Typical value = 20.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.kfcor`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#khp]
=== `khp`
+++Fraction of total turbine output generated by HP part (<i>Khp</i>).  Typical value = 0,277.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.khp`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#klp]
=== `klp`
+++Fraction of total turbine output generated by HP part (<i>Klp</i>).  Typical value = 0,723.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.klp`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#komegacor]
=== `komegacor`
+++Gain of the speed governor (<i>Kwcor</i>).  Typical value = 20.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.komegacor`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#mwbase]
=== `mwbase`
+++Base for power values (<i>MWbase</i>) (&gt; 0).  Unit = MW.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.mwbase`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#pmax]
=== `pmax`
+++Maximal active power of the turbine (<i>Pmax</i>).  Typical value = 1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.pmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#prhmax]
=== `prhmax`
+++Maximum low pressure limit (<i>Prhmax</i>).  Typical value = 1,4.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.prhmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#simx]
=== `simx`
+++Intercept valves transfer limit (<i>Simx</i>).  Typical value = 0,425.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.simx`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#SynchronousMachineDynamics]
=== `SynchronousMachineDynamics`
+++Synchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an association to SynchronousMachineDynamics or to AsynchronousMachineDynamics.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TurbineGovernorDynamics.SynchronousMachineDynamics`
| Cardinality
| 0..1
| Type
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]

| Inherited from
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#tb]
=== `tb`
+++Boiler time constant (<i>Tb</i>) (&gt;= 0).  Typical value = 100.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.tb`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tdp]
=== `tdp`
+++Derivative time constant of the power controller (<i>Tdp</i>) (&gt;= 0).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.tdp`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#ten]
=== `ten`
+++Electro hydraulic transducer (<i>Ten</i>) (&gt;= 0).  Typical value = 0,1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.ten`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tf]
=== `tf`
+++Frequency transducer time constant (<i>Tf</i>) (&gt;= 0).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.tf`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tfp]
=== `tfp`
+++Time constant of the power controller (<i>Tfp</i>) (&gt;= 0).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.tfp`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#thp]
=== `thp`
+++High pressure (HP) time constant of the turbine (<i>Thp</i>) (&gt;= 0).  Typical value = 0,31.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.thp`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tip]
=== `tip`
+++Integral time constant of the power controller (<i>Tip</i>) (&gt;= 0).  Typical value = 2.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.tip`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tlp]
=== `tlp`
+++Low pressure (LP) time constant of the turbine (<i>Tlp</i>) (&gt;= 0).  Typical value = 0,45.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.tlp`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tp]
=== `tp`
+++Power transducer time constant (<i>Tp</i>) (&gt;= 0).  Typical value = 0,07.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.tp`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#trh]
=== `trh`
+++Reheater  time constant of the turbine (<i>Trh</i>) (&gt;= 0).  Typical value = 8.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.trh`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#TurbineLoadControllerDynamics]
=== `TurbineLoadControllerDynamics`
+++Turbine load controller providing input to this turbine-governor.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TurbineGovernorDynamics.TurbineLoadControllerDynamics`
| Cardinality
| 0..1
| Type
| xref::class/TurbineLoadControllerDynamics.adoc[`TurbineLoadControllerDynamics`]

| Inherited from
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]


|===

//[discrete]
[#tvhp]
=== `tvhp`
+++Control valves servo time constant (<i>Tvhp</i>) (&gt;= 0).  Typical value = 0,1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.tvhp`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tvip]
=== `tvip`
+++Intercept valves servo time constant (<i>Tvip</i>) (&gt;= 0).  Typical value = 0,15.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.tvip`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tw]
=== `tw`
+++Speed transducer time constant (<i>Tw</i>) (&gt;= 0).  Typical value = 0,02.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.tw`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#wfmax]
=== `wfmax`
+++Upper limit for frequency correction (<i>Wfmax</i>) (&gt; GovSteamEU.wfmin).  Typical value = 0,05.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.wfmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#wfmin]
=== `wfmin`
+++Lower limit for frequency correction (<i>Wfmin</i>) (&lt; GovSteamEU.wfmax).  Typical value = -0,05.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.wfmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#wmax1]
=== `wmax1`
+++Emergency speed control lower limit (<i>wmax1</i>).  Typical value = 1,025.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.wmax1`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#wmax2]
=== `wmax2`
+++Emergency speed control upper limit (<i>wmax2</i>).  Typical value = 1,05.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.wmax2`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#wwmax]
=== `wwmax`
+++Upper limit for the speed governor (<i>Wwmax</i>) (&gt; GovSteamEU.wwmin).  Typical value = 0,1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.wwmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#wwmin]
=== `wwmin`
+++Lower limit for the speed governor frequency correction (<i>Wwmin</i>) (&lt; GovSteamEU.wwmax).  Typical value = -1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.wwmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===


