v1.1.0/modules/schema/pages/class/GovSteamEU.adoc
= `GovSteamEU`
:toclevels: 4


+++Simplified boiler and steam turbine with PID governor.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:GovSteamEU`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]
*** xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]
**** *`GovSteamEU`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<chc,`chc`>>
//| [[slots_table.chc]]<<chc,`chc`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Control valves rate closing limit (<i>Chc</i>).  Unit = PU / s.  Typical value = -3,3.+++
| _n/a_

| <<cho,`cho`>>
//| [[slots_table.cho]]<<cho,`cho`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Control valves rate opening limit (<i>Cho</i>).  Unit = PU / s.  Typical value = 0,17.+++
| _n/a_

| <<cic,`cic`>>
//| [[slots_table.cic]]<<cic,`cic`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Intercept valves rate closing limit (<i>Cic</i>).  Typical value = -2,2.+++
| _n/a_

| <<cio,`cio`>>
//| [[slots_table.cio]]<<cio,`cio`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Intercept valves rate opening limit (<i>Cio</i>).  Typical value = 0,123.+++
| _n/a_

| <<db1,`db1`>>
//| [[slots_table.db1]]<<db1,`db1`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Deadband of the frequency corrector (<i>db1</i>).  Typical value = 0.+++
| _n/a_

| <<db2,`db2`>>
//| [[slots_table.db2]]<<db2,`db2`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Deadband of the speed governor (<i>db2</i>).  Typical value = 0,0004.+++
| _n/a_

| <<hhpmax,`hhpmax`>>
//| [[slots_table.hhpmax]]<<hhpmax,`hhpmax`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Maximum control valve position (<i>Hhpmax</i>).  Typical value = 1.+++
| _n/a_

| <<ke,`ke`>>
//| [[slots_table.ke]]<<ke,`ke`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Gain of the power controller (<i>Ke</i>).  Typical value = 0,65.+++
| _n/a_

| <<kfcor,`kfcor`>>
//| [[slots_table.kfcor]]<<kfcor,`kfcor`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Gain of the frequency corrector (<i>Kfcor</i>).  Typical value = 20.+++
| _n/a_

| <<khp,`khp`>>
//| [[slots_table.khp]]<<khp,`khp`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Fraction of total turbine output generated by HP part (<i>Khp</i>).  Typical value = 0,277.+++
| _n/a_

| <<klp,`klp`>>
//| [[slots_table.klp]]<<klp,`klp`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Fraction of total turbine output generated by HP part (<i>Klp</i>).  Typical value = 0,723.+++
| _n/a_

| <<komegacor,`komegacor`>>
//| [[slots_table.komegacor]]<<komegacor,`komegacor`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Gain of the speed governor (<i>Kwcor</i>).  Typical value = 20.+++
| _n/a_

| <<mwbase,`mwbase`>>
//| [[slots_table.mwbase]]<<mwbase,`mwbase`>>
| 0..1 +
xref::class/ActivePower.adoc[`ActivePower`]
| +++Base for power values (<i>MWbase</i>) (&gt; 0).  Unit = MW.+++
| _n/a_

| <<pmax,`pmax`>>
//| [[slots_table.pmax]]<<pmax,`pmax`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Maximal active power of the turbine (<i>Pmax</i>).  Typical value = 1.+++
| _n/a_

| <<prhmax,`prhmax`>>
//| [[slots_table.prhmax]]<<prhmax,`prhmax`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Maximum low pressure limit (<i>Prhmax</i>).  Typical value = 1,4.+++
| _n/a_

| <<simx,`simx`>>
//| [[slots_table.simx]]<<simx,`simx`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Intercept valves transfer limit (<i>Simx</i>).  Typical value = 0,425.+++
| _n/a_

| <<tb,`tb`>>
//| [[slots_table.tb]]<<tb,`tb`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Boiler time constant (<i>Tb</i>) (&gt;= 0).  Typical value = 100.+++
| _n/a_

| <<tdp,`tdp`>>
//| [[slots_table.tdp]]<<tdp,`tdp`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Derivative time constant of the power controller (<i>Tdp</i>) (&gt;= 0).  Typical value = 0.+++
| _n/a_

| <<ten,`ten`>>
//| [[slots_table.ten]]<<ten,`ten`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Electro hydraulic transducer (<i>Ten</i>) (&gt;= 0).  Typical value = 0,1.+++
| _n/a_

| <<tf,`tf`>>
//| [[slots_table.tf]]<<tf,`tf`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Frequency transducer time constant (<i>Tf</i>) (&gt;= 0).  Typical value = 0.+++
| _n/a_

| <<tfp,`tfp`>>
//| [[slots_table.tfp]]<<tfp,`tfp`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Time constant of the power controller (<i>Tfp</i>) (&gt;= 0).  Typical value = 0.+++
| _n/a_

| <<thp,`thp`>>
//| [[slots_table.thp]]<<thp,`thp`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++High pressure (HP) time constant of the turbine (<i>Thp</i>) (&gt;= 0).  Typical value = 0,31.+++
| _n/a_

| <<tip,`tip`>>
//| [[slots_table.tip]]<<tip,`tip`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Integral time constant of the power controller (<i>Tip</i>) (&gt;= 0).  Typical value = 2.+++
| _n/a_

| <<tlp,`tlp`>>
//| [[slots_table.tlp]]<<tlp,`tlp`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Low pressure (LP) time constant of the turbine (<i>Tlp</i>) (&gt;= 0).  Typical value = 0,45.+++
| _n/a_

| <<tp,`tp`>>
//| [[slots_table.tp]]<<tp,`tp`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Power transducer time constant (<i>Tp</i>) (&gt;= 0).  Typical value = 0,07.+++
| _n/a_

| <<trh,`trh`>>
//| [[slots_table.trh]]<<trh,`trh`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Reheater  time constant of the turbine (<i>Trh</i>) (&gt;= 0).  Typical value = 8.+++
| _n/a_

| <<tvhp,`tvhp`>>
//| [[slots_table.tvhp]]<<tvhp,`tvhp`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Control valves servo time constant (<i>Tvhp</i>) (&gt;= 0).  Typical value = 0,1.+++
| _n/a_

| <<tvip,`tvip`>>
//| [[slots_table.tvip]]<<tvip,`tvip`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Intercept valves servo time constant (<i>Tvip</i>) (&gt;= 0).  Typical value = 0,15.+++
| _n/a_

| <<tw,`tw`>>
//| [[slots_table.tw]]<<tw,`tw`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Speed transducer time constant (<i>Tw</i>) (&gt;= 0).  Typical value = 0,02.+++
| _n/a_

| <<wfmax,`wfmax`>>
//| [[slots_table.wfmax]]<<wfmax,`wfmax`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Upper limit for frequency correction (<i>Wfmax</i>) (&gt; GovSteamEU.wfmin).  Typical value = 0,05.+++
| _n/a_

| <<wfmin,`wfmin`>>
//| [[slots_table.wfmin]]<<wfmin,`wfmin`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Lower limit for frequency correction (<i>Wfmin</i>) (&lt; GovSteamEU.wfmax).  Typical value = -0,05.+++
| _n/a_

| <<wmax1,`wmax1`>>
//| [[slots_table.wmax1]]<<wmax1,`wmax1`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Emergency speed control lower limit (<i>wmax1</i>).  Typical value = 1,025.+++
| _n/a_

| <<wmax2,`wmax2`>>
//| [[slots_table.wmax2]]<<wmax2,`wmax2`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Emergency speed control upper limit (<i>wmax2</i>).  Typical value = 1,05.+++
| _n/a_

| <<wwmax,`wwmax`>>
//| [[slots_table.wwmax]]<<wwmax,`wwmax`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Upper limit for the speed governor (<i>Wwmax</i>) (&gt; GovSteamEU.wwmin).  Typical value = 0,1.+++
| _n/a_

| <<wwmin,`wwmin`>>
//| [[slots_table.wwmin]]<<wwmin,`wwmin`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Lower limit for the speed governor frequency correction (<i>Wwmin</i>) (&lt; GovSteamEU.wwmax).  Typical value = -1.+++
| _n/a_

| <<AsynchronousMachineDynamics,`AsynchronousMachineDynamics`>>
//| [[slots_table.AsynchronousMachineDynamics]]<<AsynchronousMachineDynamics,`AsynchronousMachineDynamics`>>
| 0..1 +
xref::class/AsynchronousMachineDynamics.adoc[`AsynchronousMachineDynamics`]
| +++Asynchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either...+++
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]

| <<SynchronousMachineDynamics,`SynchronousMachineDynamics`>>
//| [[slots_table.SynchronousMachineDynamics]]<<SynchronousMachineDynamics,`SynchronousMachineDynamics`>>
| 0..1 +
xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]
| +++Synchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an...+++
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]

| <<TurbineLoadControllerDynamics,`TurbineLoadControllerDynamics`>>
//| [[slots_table.TurbineLoadControllerDynamics]]<<TurbineLoadControllerDynamics,`TurbineLoadControllerDynamics`>>
| 0..1 +
xref::class/TurbineLoadControllerDynamics.adoc[`TurbineLoadControllerDynamics`]
| +++Turbine load controller providing input to this turbine-governor.+++
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]

| <<enabled,`enabled`>>
//| [[slots_table.enabled]]<<enabled,`enabled`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#AsynchronousMachineDynamics]
=== `AsynchronousMachineDynamics`
+++Asynchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an association to SynchronousMachineDynamics or to AsynchronousMachineDynamics.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TurbineGovernorDynamics.AsynchronousMachineDynamics`
| Cardinality
| 0..1
| Type
| xref::class/AsynchronousMachineDynamics.adoc[`AsynchronousMachineDynamics`]

| Inherited from
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]


|===

////
[.text-left]
--
<<slots_table.AsynchronousMachineDynamics,&#10548;>>
--
////


//[discrete]
[#chc]
=== `chc`
+++Control valves rate closing limit (<i>Chc</i>).  Unit = PU / s.  Typical value = -3,3.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.chc`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.chc,&#10548;>>
--
////


//[discrete]
[#cho]
=== `cho`
+++Control valves rate opening limit (<i>Cho</i>).  Unit = PU / s.  Typical value = 0,17.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.cho`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.cho,&#10548;>>
--
////


//[discrete]
[#cic]
=== `cic`
+++Intercept valves rate closing limit (<i>Cic</i>).  Typical value = -2,2.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.cic`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.cic,&#10548;>>
--
////


//[discrete]
[#cio]
=== `cio`
+++Intercept valves rate opening limit (<i>Cio</i>).  Typical value = 0,123.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.cio`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.cio,&#10548;>>
--
////


//[discrete]
[#db1]
=== `db1`
+++Deadband of the frequency corrector (<i>db1</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.db1`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.db1,&#10548;>>
--
////


//[discrete]
[#db2]
=== `db2`
+++Deadband of the speed governor (<i>db2</i>).  Typical value = 0,0004.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.db2`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.db2,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#enabled]
=== `enabled`
+++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DynamicsFunctionBlock.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]


|===

////
[.text-left]
--
<<slots_table.enabled,&#10548;>>
--
////


//[discrete]
[#hhpmax]
=== `hhpmax`
+++Maximum control valve position (<i>Hhpmax</i>).  Typical value = 1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.hhpmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.hhpmax,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#ke]
=== `ke`
+++Gain of the power controller (<i>Ke</i>).  Typical value = 0,65.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.ke`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.ke,&#10548;>>
--
////


//[discrete]
[#kfcor]
=== `kfcor`
+++Gain of the frequency corrector (<i>Kfcor</i>).  Typical value = 20.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.kfcor`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kfcor,&#10548;>>
--
////


//[discrete]
[#khp]
=== `khp`
+++Fraction of total turbine output generated by HP part (<i>Khp</i>).  Typical value = 0,277.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.khp`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.khp,&#10548;>>
--
////


//[discrete]
[#klp]
=== `klp`
+++Fraction of total turbine output generated by HP part (<i>Klp</i>).  Typical value = 0,723.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.klp`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.klp,&#10548;>>
--
////


//[discrete]
[#komegacor]
=== `komegacor`
+++Gain of the speed governor (<i>Kwcor</i>).  Typical value = 20.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.komegacor`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.komegacor,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#mwbase]
=== `mwbase`
+++Base for power values (<i>MWbase</i>) (&gt; 0).  Unit = MW.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.mwbase`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]


|===

////
[.text-left]
--
<<slots_table.mwbase,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#pmax]
=== `pmax`
+++Maximal active power of the turbine (<i>Pmax</i>).  Typical value = 1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.pmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.pmax,&#10548;>>
--
////


//[discrete]
[#prhmax]
=== `prhmax`
+++Maximum low pressure limit (<i>Prhmax</i>).  Typical value = 1,4.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.prhmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.prhmax,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#simx]
=== `simx`
+++Intercept valves transfer limit (<i>Simx</i>).  Typical value = 0,425.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.simx`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.simx,&#10548;>>
--
////


//[discrete]
[#SynchronousMachineDynamics]
=== `SynchronousMachineDynamics`
+++Synchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an association to SynchronousMachineDynamics or to AsynchronousMachineDynamics.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TurbineGovernorDynamics.SynchronousMachineDynamics`
| Cardinality
| 0..1
| Type
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]

| Inherited from
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]


|===

////
[.text-left]
--
<<slots_table.SynchronousMachineDynamics,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#tb]
=== `tb`
+++Boiler time constant (<i>Tb</i>) (&gt;= 0).  Typical value = 100.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.tb`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tb,&#10548;>>
--
////


//[discrete]
[#tdp]
=== `tdp`
+++Derivative time constant of the power controller (<i>Tdp</i>) (&gt;= 0).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.tdp`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tdp,&#10548;>>
--
////


//[discrete]
[#ten]
=== `ten`
+++Electro hydraulic transducer (<i>Ten</i>) (&gt;= 0).  Typical value = 0,1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.ten`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.ten,&#10548;>>
--
////


//[discrete]
[#tf]
=== `tf`
+++Frequency transducer time constant (<i>Tf</i>) (&gt;= 0).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.tf`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tf,&#10548;>>
--
////


//[discrete]
[#tfp]
=== `tfp`
+++Time constant of the power controller (<i>Tfp</i>) (&gt;= 0).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.tfp`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tfp,&#10548;>>
--
////


//[discrete]
[#thp]
=== `thp`
+++High pressure (HP) time constant of the turbine (<i>Thp</i>) (&gt;= 0).  Typical value = 0,31.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.thp`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.thp,&#10548;>>
--
////


//[discrete]
[#tip]
=== `tip`
+++Integral time constant of the power controller (<i>Tip</i>) (&gt;= 0).  Typical value = 2.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.tip`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tip,&#10548;>>
--
////


//[discrete]
[#tlp]
=== `tlp`
+++Low pressure (LP) time constant of the turbine (<i>Tlp</i>) (&gt;= 0).  Typical value = 0,45.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.tlp`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tlp,&#10548;>>
--
////


//[discrete]
[#tp]
=== `tp`
+++Power transducer time constant (<i>Tp</i>) (&gt;= 0).  Typical value = 0,07.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.tp`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tp,&#10548;>>
--
////


//[discrete]
[#trh]
=== `trh`
+++Reheater  time constant of the turbine (<i>Trh</i>) (&gt;= 0).  Typical value = 8.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.trh`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.trh,&#10548;>>
--
////


//[discrete]
[#TurbineLoadControllerDynamics]
=== `TurbineLoadControllerDynamics`
+++Turbine load controller providing input to this turbine-governor.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TurbineGovernorDynamics.TurbineLoadControllerDynamics`
| Cardinality
| 0..1
| Type
| xref::class/TurbineLoadControllerDynamics.adoc[`TurbineLoadControllerDynamics`]

| Inherited from
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]


|===

////
[.text-left]
--
<<slots_table.TurbineLoadControllerDynamics,&#10548;>>
--
////


//[discrete]
[#tvhp]
=== `tvhp`
+++Control valves servo time constant (<i>Tvhp</i>) (&gt;= 0).  Typical value = 0,1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.tvhp`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tvhp,&#10548;>>
--
////


//[discrete]
[#tvip]
=== `tvip`
+++Intercept valves servo time constant (<i>Tvip</i>) (&gt;= 0).  Typical value = 0,15.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.tvip`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tvip,&#10548;>>
--
////


//[discrete]
[#tw]
=== `tw`
+++Speed transducer time constant (<i>Tw</i>) (&gt;= 0).  Typical value = 0,02.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.tw`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tw,&#10548;>>
--
////


//[discrete]
[#wfmax]
=== `wfmax`
+++Upper limit for frequency correction (<i>Wfmax</i>) (&gt; GovSteamEU.wfmin).  Typical value = 0,05.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.wfmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.wfmax,&#10548;>>
--
////


//[discrete]
[#wfmin]
=== `wfmin`
+++Lower limit for frequency correction (<i>Wfmin</i>) (&lt; GovSteamEU.wfmax).  Typical value = -0,05.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.wfmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.wfmin,&#10548;>>
--
////


//[discrete]
[#wmax1]
=== `wmax1`
+++Emergency speed control lower limit (<i>wmax1</i>).  Typical value = 1,025.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.wmax1`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.wmax1,&#10548;>>
--
////


//[discrete]
[#wmax2]
=== `wmax2`
+++Emergency speed control upper limit (<i>wmax2</i>).  Typical value = 1,05.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.wmax2`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.wmax2,&#10548;>>
--
////


//[discrete]
[#wwmax]
=== `wwmax`
+++Upper limit for the speed governor (<i>Wwmax</i>) (&gt; GovSteamEU.wwmin).  Typical value = 0,1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.wwmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.wwmax,&#10548;>>
--
////


//[discrete]
[#wwmin]
=== `wwmin`
+++Lower limit for the speed governor frequency correction (<i>Wwmin</i>) (&lt; GovSteamEU.wwmax).  Typical value = -1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamEU.wwmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.wwmin,&#10548;>>
--
////





== Used by


This class is not used by any other classes as the range of a slot.
